--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   background-color: rgb(253, 251, 251);
-  font-family: 'Reggae One', 'cursive';
-  color: #011A51;
+  font-family: "Reggae One", "cursive";
+  color: #011a51;
   line-height: 1.5;
   font-size: 20px;
   text-align: center;
@@ -14,35 +14,35 @@ body {
   text-align: center;
   display: block;
   width: 100%;
-  background-color: #7EA3F1;
-  border-bottom: 5px solid #487BEA;
-  border-top: 5px solid #487BEA;
+  background-color: #7ea3f1;
+  border-bottom: 5px solid #487bea;
+  border-top: 5px solid #487bea;
   font-size: xx-large;
   -webkit-text-stroke-width: 5px;
-  -webkit-text-stroke-color: #011A51;
-  color: #C8D7F9;
+  -webkit-text-stroke-color: #011a51;
+  color: #c8d7f9;
 }
 
 main h2 {
   -webkit-text-stroke-width: 2px;
-  -webkit-text-stroke-color: #011A51;
-  color: #7EA3F1;
+  -webkit-text-stroke-color: #011a51;
+  color: #7ea3f1;
 }
 
 aside h2 {
   margin-top: 2009px;
   -webkit-text-stroke-width: 2px;
-  -webkit-text-stroke-color: #7EA3F1;
+  -webkit-text-stroke-color: #7ea3f1;
   color: #1957DB;
 }
 
 figure {
-  background-color: #011A51;
+  background-color: #011a51;
   width: 670px;
   display: inline-block;
   border-radius: 50px;
   height: 700px;
-  border: 5px solid #487BEA;
+  border: 5px solid #487bea;
   margin-top: 100px;
 }
 
@@ -50,20 +50,20 @@ figure {
   border-radius: 50%;
   width: 500px;
   margin-top: 25px;
-  border: 50px ridge #487BEA;
+  border: 50px ridge #487bea;
 }
 
 #nav {
-  background-color: #C8D7F9;
+  background-color: #c8d7f9;
 }
 
-ul, ol, p {
+ul , ol , p {
   display: inline-block;
   text-align: left;
   width: 500px;
 }
 
-aside, article{
+#aside , article {
   display: inline-block;
 }
 
@@ -71,45 +71,45 @@ a {
   text-decoration: none;
 }
 
-main{
+main {
   width: 60%;
   display: inline-block;
-  border: 5px solid #487BEA;
+  border: 5px solid #487bea;
   margin-top: 195px;
-  background-color: #C8D7F9;
+  background-color: #c8d7f9;
 }
 
-aside {
+#aside {
   width: 40%;
   display: inline-block;
   margin-top: 195px;
-  border: 5px solid #7EA3F1;
-  color: #C8D7F9;
-  background-color: #011A51;
+  border: 5px solid #7ea3f1;
+  color: #c8d7f9;
+  background-color: #011a51;
 }
 
 #main_structure {
   display: flex;
 }
 
-main p {
-  width: 615px
-}
-
-aside p {
-  width: 515px;
-}
-
 p {
   text-align: justify;
+}
+
+main p {
+  width: 615px;
+}
+
+#aside p {
+  width: 515px;
 }
 
 footer a {
   padding: 20px;
   border-radius: 10px;
-  background-color: #011A51;
-  color: #C8D7F9;
-  border: 5px solid #487BEA;
+  background-color: #011a51;
+  color: #c8d7f9;
+  border: 5px solid #487bea;
 }
 
 footer {
@@ -122,18 +122,18 @@ footer h2 {
 
 table {
   display: inline-block;
-  border: 1px solid #011A51;
+  border: 1px solid #011a51;
+}
+
+th , td {
+  border: 1px solid #011a51;
+  padding: 5px;
 }
 
 tbody td {
   text-align: left;
 }
 
-th, td {
-  border: 1px solid #011A51;
-  padding: 5px;
-}
-
 th {
-  background-color: #7EA3F1;
+  background-color: #7ea3f1;
 }
